# CodeBarres

./: .gitignore  README.md
code/: CMakeLists.txt  EAN.h  PreProcess.cpp  PreProcess.h  Process.cpp  Process.h  doc.md  main.cpp
code/test/: TestPreProcess.cpp  TestPreProcess.h  TestProcess.cpp  TestProcess.h
img/: A1  A2  A3  data.md
img/etp1/: 1.data  2.data  3.data  4.data  5.data  E1.txt  E2.txt  E3.txt
img/etp2/: 1.data  1.txt  10.data  11.data  12.data  13.data  14.data  15.data  16.data  2.data  2.txt  3.data  3.txt  4.data  4.txt  5.data  6.data  7.data  8.data  9.data  E1.txt  E2.txt  E3.txt  cb1.txt
img/etp3/: 1.data  2.data  3.data  4.data  5.data  6.data  7.data  E1.txt  E2.txt
img/etp4/: 1.data  E1.txt
